# DomainMind

./: .gitignore  README.md  create_vectordb.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
DomainMind/: DataLoad.py  Interface.py  LLMConfig.py  MultiQueryGenChain.py  MultiQueryRetrievalChain.py  OutputProcess.py  RAGChain.py  RetrieverConfig.py  SummaryChain.py  VectorDB.py
data/sampledoc_vectordb/0f0d3b47-ba63-42c9-bd7a-53af1a3eb281/: index_metadata.pickle
docs/: requirements.txt
docs/data/doc_vectordb/: chroma.sqlite3
docs/data/sampledoc_vectordb/: chroma.sqlite3
docs/source/: code.rst  conf.py  index.rst
docs/source/api/: DomainMind.rst  create_vectordb.rst  modules.rst  src.rst
notebooks/: 02-Multi-Query_RAG.ipynb  03-Memory-Summarization.ipynb  LangChain_Intro.ipynb  data_processing.ipynb  test.ipynb
prompts/: main_v1.txt  main_v2.txt  multiquerygen_v1.txt  summarygen_v1.txt
src/: DataLoad.py  Interface.py  LLMConfig.py  MultiQueryGenChain.py  MultiQueryRetrievalChain.py  OutputProcess.py  RAGChain.py  RetrieverConfig.py  SummaryChain.py  VectorDB.py
src/DomainMind/: DataLoad.py  Interface.py  MultiQueryGenChain.py  MultiQueryRetrievalChain.py  RAGChain.py  RetrieverConfig.py  SummaryChain.py
